Hennessy Section — photo optimization, resize photos to max-width

--- a/src/assets/styles/components/_project-animations.scss
+++ b/src/assets/styles/components/_project-animations.scss
@@ -83,6 +83,7 @@
 
         &:nth-child(1) { // rocko
             width: 21%;
+            max-width: 355px;
             top: 19vh;
             left: 33%;
             z-index: 1;
@@ -90,6 +91,7 @@
 
         &:nth-child(2) { // fabric            
             width: 20%;
+            max-width: 335px;
             bottom: -45vh;
             left: 35%;
             z-index: 1;
@@ -97,6 +99,7 @@
 
         &:nth-child(3) { // drinks
             width: 18%;
+            max-width: 305px;
             top: 21vh;
             right: 4%;
             z-index: 1;
@@ -104,6 +107,7 @@
 
         &:nth-child(4) { // street
             width: 18%;
+            max-width: 305px;
             bottom: -17vh;
             right: 24%;
             z-index: 1;
@@ -111,6 +115,7 @@
 
         &:nth-child(5) { // victor
             width: 20%;
+            max-width: 335px;
             bottom: -7vh;
             right: 5%;
             z-index: 2;
@@ -118,6 +123,7 @@
 
         &:nth-child(6) { // yin
             width: 17%;
+            max-width: 285px;
             top: 33vh;
             left: 53%;
             z-index: 1;
