Navbar — initial build

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -6,6 +6,7 @@
 @import './_typography';
 @import './_variables';
 @import './_animations';
+@import './components/navbar';
 @import './components/intro-section';
 @import './components/about-section';
 @import './components/skills-section';
