--- a/src/assets/styles/components/_navbar.scss
+++ b/src/assets/styles/components/_navbar.scss
@@ -8,13 +8,14 @@
         top: 0;
         bottom: 0;
         z-index: 100;
-        transition: all 0.2s ease-in-out 0s;
+        transition: all 0.4s linear 0.8s;
 
         li {
             cursor: pointer;
             display: block;
             flex: 1;
             width: 8px;
+            transform-origin: center center;
             transition: all 0.1s ease-in-out 0s;
         
             &:nth-of-type(1) {
@@ -39,7 +40,7 @@
         }
     }
 
-    &.active-0 {
+    &.active-0 ul.navbar {
         transform: translateX(-15px);
     }
 }
