--- a/src/assets/styles/components/_navbar.scss
+++ b/src/assets/styles/components/_navbar.scss
@@ -20,6 +20,7 @@
             height: 100vh;
 
             li {
+                position: relative;
                 display: block;
                 flex: 1;
                 box-sizing: border-box;
@@ -30,22 +31,57 @@
             
                 &:nth-of-type(1) {
                     background-color: $indigo;
+
+                    &::after {
+                        color: $indigo;
+                    }
                 }
 
                 &:nth-of-type(2) {
                     background-color: $java;
+
+                    &::after {
+                        color: $java;
+                    }
                 }
 
                 &:nth-of-type(3) {
                     background-color: $sunglow;
+
+                    &::after {
+                        color: $sunglow;
+                    }
                 }
 
                 &:nth-of-type(4) {
                     background-color: $carrot;
+
+                    &::after {
+                        color: $carrot;
+                    }
+                }
+
+                &::after {
+                    opacity: 0;
+                    content: attr(data-title);
+                    position: absolute;
+                    font-size: 0.9rem;
+                    top: 50%;
+                    left: 15px;
+                    transform: translateY(-50%);
+                    transition: opacity 0.25s ease-out 0s;
                 }
 
                 &:hover {
                     flex: 3;
+                    
+                    &::after {
+                        opacity: 1;
+                    }
+                }
+
+                span {
+                    display: none;
                 }
             }
         }
@@ -76,6 +112,33 @@
             li {
                 width: 15px;
                 height: 15px;
+
+                &::after {
+                    display: none;
+                }
+
+                span {
+                    display: block;
+                    width: 0;
+                    overflow: hidden;
+                    color: $off-white;
+                    font-family: $apercu-bold;
+                    font-size: 10px;
+                    text-align: center;
+                    line-height: 1;
+                    opacity: 0;
+                    padding-top: 2.5px;
+                    transition: all 0.25s linear 0s;
+                }
+
+                &:hover {
+                    flex: 0 0 100%;
+
+                    span {
+                        width: auto;
+                        opacity: 1;
+                    }
+                }
             }
         }
 
