--- a/src/assets/styles/components/_navbar.scss
+++ b/src/assets/styles/components/_navbar.scss
@@ -28,9 +28,11 @@
                 width: 100%;
                 transform-origin: center center;
                 transition: all 0.25s ease-out 0s;
+                animation: 0.22s ctaTease ease-out;
             
                 &:nth-of-type(1) {
                     background-color: $indigo;
+                    animation-delay: 2.4s;
 
                     &::after {
                         color: $indigo;
@@ -39,6 +41,7 @@
 
                 &:nth-of-type(2) {
                     background-color: $java;
+                    animation-delay: 2.6s;
 
                     &::after {
                         color: $java;
@@ -47,6 +50,7 @@
 
                 &:nth-of-type(3) {
                     background-color: $sunglow;
+                    animation-delay: 2.8s;
 
                     &::after {
                         color: $sunglow;
@@ -55,6 +59,7 @@
 
                 &:nth-of-type(4) {
                     background-color: $carrot;
+                    animation-delay: 3s;
 
                     &::after {
                         color: $carrot;
@@ -69,7 +74,7 @@
                     top: 50%;
                     left: 15px;
                     transform: translateY(-50%);
-                    transition: opacity 0.25s ease-out 0s;
+                    transition: opacity 0.15s ease-out 0s;
                 }
 
                 &:hover {
@@ -179,5 +184,22 @@
     100% {
         opacity: 1;
         transform: translateX(0);
+    }
+}
+
+@keyframes ctaTease {
+    0% {
+        z-index: 100;
+        transform: scale(1);
+    }
+    49% {
+        transform: scale(1.3);
+    }
+    51% {
+        transform: scale(1.3);
+    }
+    100% {
+        z-index: 100;
+        transform: scale(1);
     }
 }
