--- a/src/assets/styles/components/_navbar.scss
+++ b/src/assets/styles/components/_navbar.scss
@@ -28,11 +28,10 @@
                 width: 100%;
                 transform-origin: center center;
                 transition: all 0.25s ease-out 0s;
-                animation: 0.22s ctaTease ease-out;
+                animation: 0.75s ctaTease ease-out;
             
                 &:nth-of-type(1) {
                     background-color: $indigo;
-                    animation-delay: 2.4s;
 
                     &::after {
                         color: $indigo;
@@ -41,7 +40,6 @@
 
                 &:nth-of-type(2) {
                     background-color: $java;
-                    animation-delay: 2.6s;
 
                     &::after {
                         color: $java;
@@ -50,7 +48,6 @@
 
                 &:nth-of-type(3) {
                     background-color: $sunglow;
-                    animation-delay: 2.8s;
 
                     &::after {
                         color: $sunglow;
@@ -59,7 +56,6 @@
 
                 &:nth-of-type(4) {
                     background-color: $carrot;
-                    animation-delay: 3s;
 
                     &::after {
                         color: $carrot;
@@ -87,6 +83,17 @@
 
                 span {
                     display: none;
+                    animation: 0.75s ctaTeaseText ease-out;
+                }
+
+                @for $i from 1 through 4 {
+                    &:nth-of-type(#{$i}) {
+                        animation-delay: #{($i * 0.8) + 1}s;
+
+                        span {
+                            animation-delay: #{($i * 0.8) + 1}s;
+                        }
+                    }
                 }
             }
         }
@@ -188,18 +195,21 @@
 }
 
 @keyframes ctaTease {
-    0% {
-        z-index: 100;
-        transform: scale(1);
-    }
     49% {
-        transform: scale(1.3);
+        flex: 0 0 100%;
     }
     51% {
-        transform: scale(1.3);
+        flex: 0 0 100%;
     }
-    100% {
-        z-index: 100;
-        transform: scale(1);
+}
+
+@keyframes ctaTeaseText {
+    30% {
+        width: auto;
+        opacity: 1;
+    }
+    70% {
+        width: auto;
+        opacity: 1;
     }
 }
