--- a/src/assets/styles/components/_navbar.scss
+++ b/src/assets/styles/components/_navbar.scss
@@ -28,7 +28,7 @@
                 width: 100%;
                 transform-origin: center center;
                 transition: all 0.25s ease-out 0s;
-                animation: 0.75s ctaTease ease-out;
+                // animation: 0.75s ctaTease ease-out;
             
                 &:nth-of-type(1) {
                     background-color: $indigo;
@@ -83,7 +83,7 @@
 
                 span {
                     display: none;
-                    animation: 0.75s ctaTeaseText ease-out;
+                    // animation: 0.75s ctaTeaseText ease-out;
                 }
 
                 @for $i from 1 through 4 {
