--- a/2021-refactor/styles/components/fullpage-container.module.scss
+++ b/2021-refactor/styles/components/fullpage-container.module.scss
@@ -7,3 +7,22 @@
 	height: 100%;
 	overflow: hidden;
 }
+
+.fp_section {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	z-index: 1;
+
+	&.active {
+		opacity: 1;
+		z-index: 2;
+	}
+}
