--- a/2021-refactor/styles/variables/colors.scss
+++ b/2021-refactor/styles/variables/colors.scss
@@ -3,5 +3,5 @@ $java: #27BCB6;
 $sunglow: #FFBA35;
 $carrot: #FF8F35;
 
-$off-black: #272727;
-$off-white: #f0eee2;
+$black: #272727;
+$white: #f0eee2;
