--- a/2021-refactor/styles/global.scss
+++ b/2021-refactor/styles/global.scss
@@ -27,6 +27,22 @@ body {
 	}
 }
 
+/* Prevent "Bouncing" on Scroll */
+html {
+	height: 100%;
+  overflow: hidden;
+}
+
+body {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	overflow: auto;
+}
+/**/
+
 h1, h2, h3 {
 	font-family: fonts.$apercu-bold;
 }
