--- a/2021-refactor/styles/components/highlight-animation.module.scss
+++ b/2021-refactor/styles/components/highlight-animation.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: inline-block;
   position: relative;
-  padding: 0px 15px 2px;
+  padding: 0px 0px 2px 17px;
 
   &::before {
     content: "";
@@ -27,14 +27,31 @@
       background-color: $variable;
     }
   }
-  
-  .content {
+
+  .word {
     display: inline-block;
     position: relative;
     transform: translateY(-130%);
     transition: transform 1.25s cubic-bezier(0.075, 0.82, 0.165, 1) 0.2s;
     color: $white;
+    white-space: nowrap;
     line-height: 1.2;
+
+    &:nth-child(2) {
+      transition-delay: 0.3s;
+    }
+
+    &:nth-child(3) {
+      transition-delay: 0.4s;
+    }
+
+    &:nth-child(4) {
+      transition-delay: 0.5s;
+    }
+
+    &:nth-child(5) {
+      transition-delay: 0.6s;
+    }
   }
 
   &.animate {
@@ -43,7 +60,7 @@
       right: 0;
     }
 
-    .content {
+    .word {
       transform: translateY(0%);
     }
   }
