--- a/2021-refactor/styles/components/highlight-animation.module.scss
+++ b/2021-refactor/styles/components/highlight-animation.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: inline-block;
   position: relative;
-  padding: 0px 0px 2px 17px;
+  padding: 2px 10px 3px;
 
   &::before {
     content: "";
@@ -36,6 +36,7 @@
     color: $white;
     white-space: nowrap;
     line-height: 1.2;
+    padding-left: 16px; // highlight component adds space at the end of every word
 
     &:nth-child(2) {
       transition-delay: 0.3s;
